java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint1-hints.pass
Cast ...x to String
Change type of s to Object
